[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "meds-biobank"
version = "0.0.2"
authors = [
  { name="Andrew Zolensky", email="andrewlzolensky@gmail.com" },
]
description = "Unofficial, lightweight Python re-implementation of parts of the **MEDS** software ecosystem, built to operate on in-memory tables loaded via PySpark rather than directly on disk. Designed for small-to-medium biobanks queried through cloud services in interactive Python notebooks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pyspark>=3.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/AndrewLZolensky/meds-biobank"

[tool.setuptools.packages.find]
where = ["src"]